[gd_scene load_steps=48 format=2]

[ext_resource path="res://Assets/Sprite/Zombie Soldier/soldier-idle_00.png" type="Texture" id=1]
[ext_resource path="res://Assets/Sprite/Zombie Soldier/attack/soldier-attack_06.png" type="Texture" id=2]
[ext_resource path="res://Assets/Sprite/Zombie Soldier/attack/soldier-attack_05.png" type="Texture" id=3]
[ext_resource path="res://Assets/Sprite/Zombie Soldier/dead/soldier-dead_00.png" type="Texture" id=4]
[ext_resource path="res://Assets/Sprite/Zombie Soldier/dead/soldier-dead_04.png" type="Texture" id=5]
[ext_resource path="res://Assets/Sprite/Zombie Soldier/attack/soldier-attack_04.png" type="Texture" id=6]
[ext_resource path="res://Assets/Sprite/Zombie Soldier/attack/soldier-attack_08.png" type="Texture" id=7]
[ext_resource path="res://Assets/Sprite/Zombie Soldier/dead/soldier-dead_03.png" type="Texture" id=8]
[ext_resource path="res://Assets/Sprite/Zombie Soldier/attack/soldier-attack_07.png" type="Texture" id=9]
[ext_resource path="res://Assets/Sprite/Zombie Soldier/dead/soldier-dead_02.png" type="Texture" id=10]
[ext_resource path="res://Assets/Sprite/Zombie Soldier/dead/soldier-dead_01.png" type="Texture" id=11]
[ext_resource path="res://Assets/Sprite/Zombie Soldier/attack/soldier-attack_02.png" type="Texture" id=12]
[ext_resource path="res://Assets/Sprite/Zombie Soldier/attack/soldier-attack_00.png" type="Texture" id=13]
[ext_resource path="res://Assets/Sprite/Zombie Soldier/attack/soldier-attack_09.png" type="Texture" id=14]
[ext_resource path="res://Assets/Sprite/Zombie Soldier/attack/soldier-attack_03.png" type="Texture" id=15]
[ext_resource path="res://Assets/Script/Zombie Soldier.gd" type="Script" id=16]
[ext_resource path="res://Assets/Sprite/Zombie Soldier/move/soldier-move_06.png" type="Texture" id=17]
[ext_resource path="res://Assets/Sprite/Zombie Soldier/move/soldier-move_07.png" type="Texture" id=18]
[ext_resource path="res://Assets/Sprite/Zombie Soldier/move/soldier-move_11.png" type="Texture" id=19]
[ext_resource path="res://Assets/Sprite/Zombie Soldier/move/soldier-move_10.png" type="Texture" id=20]
[ext_resource path="res://Assets/Sprite/Zombie Soldier/move/soldier-move_08.png" type="Texture" id=21]
[ext_resource path="res://Assets/Sprite/Zombie Soldier/move/soldier-move_09.png" type="Texture" id=22]
[ext_resource path="res://Assets/Sprite/Zombie Soldier/move/soldier-move_16.png" type="Texture" id=23]
[ext_resource path="res://Assets/Sprite/Zombie Soldier/move/soldier-move_19.png" type="Texture" id=24]
[ext_resource path="res://Assets/Sprite/Zombie Soldier/move/soldier-move_20.png" type="Texture" id=25]
[ext_resource path="res://Assets/Sprite/Zombie Soldier/move/soldier-move_18.png" type="Texture" id=26]
[ext_resource path="res://Assets/Sprite/Zombie Soldier/move/soldier-move_14.png" type="Texture" id=27]
[ext_resource path="res://Assets/Sprite/Zombie Soldier/move/soldier-move_17.png" type="Texture" id=28]
[ext_resource path="res://Assets/Sprite/Zombie Soldier/move/soldier-move_15.png" type="Texture" id=29]
[ext_resource path="res://Assets/Sprite/Zombie Soldier/move/soldier-move_01.png" type="Texture" id=30]
[ext_resource path="res://Assets/Sprite/Zombie Soldier/move/soldier-move_02.png" type="Texture" id=31]
[ext_resource path="res://Assets/Sprite/Zombie Soldier/move/soldier-move_03.png" type="Texture" id=32]
[ext_resource path="res://Assets/Sprite/Zombie Soldier/move/soldier-move_04.png" type="Texture" id=33]
[ext_resource path="res://Assets/Sprite/Zombie Soldier/move/soldier-move_00.png" type="Texture" id=34]
[ext_resource path="res://Assets/Sprite/Zombie Soldier/move/soldier-move_05.png" type="Texture" id=35]
[ext_resource path="res://Assets/Sprite/Zombie Soldier/move/soldier-move_13.png" type="Texture" id=36]
[ext_resource path="res://Assets/Sprite/Zombie Soldier/move/soldier-move_12.png" type="Texture" id=37]
[ext_resource path="res://Assets/Sounds/Impact Bullet.wav" type="AudioStream" id=38]

[sub_resource type="CapsuleShape2D" id=11]
radius = 30.0
height = 34.0

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 18, 54 )

[sub_resource type="Animation" id=5]
resource_name = "Attack"
length = 0.9
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 13 ), ExtResource( 12 ), ExtResource( 15 ), ExtResource( 6 ), ExtResource( 3 ), ExtResource( 2 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 14 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Dead"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 4 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 8 ), ExtResource( 5 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:_revive")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=8]
resource_name = "Idle"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 34 ), ExtResource( 30 ), ExtResource( 34 ), ExtResource( 17 ), ExtResource( 34 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "Move"
loop = true
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75, 0.8, 0.85, 0.9, 0.95, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 34 ), ExtResource( 30 ), ExtResource( 31 ), ExtResource( 32 ), ExtResource( 33 ), ExtResource( 35 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 20 ), ExtResource( 19 ), ExtResource( 37 ), ExtResource( 36 ), ExtResource( 27 ), ExtResource( 29 ), ExtResource( 23 ), ExtResource( 28 ), ExtResource( 26 ), ExtResource( 24 ), ExtResource( 25 ) ]
}

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ ExtResource( 1 ) ]
}

[sub_resource type="Animation" id=12]
resource_name = "Revive"
length = 0.45
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ ExtResource( 5 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:_revive")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.45 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.45 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ true ],
"method": "set_physics_process"
} ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.45 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stop_anim"
} ]
}

[sub_resource type="CircleShape2D" id=10]
radius = 47.0106

[node name="Zombie Soldier" type="KinematicBody2D" groups=["Revive"]]
z_index = 1
script = ExtResource( 16 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -18, 3 )
shape = SubResource( 11 )

[node name="Attack" type="Area2D" parent="."]
visible = false
position = Vector2( -14, -1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Attack"]
position = Vector2( 67, 1 )
shape = SubResource( 2 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.5
anims/Attack = SubResource( 5 )
anims/Dead = SubResource( 6 )
anims/Idle = SubResource( 8 )
anims/Move = SubResource( 9 )
anims/RESET = SubResource( 7 )
anims/Revive = SubResource( 12 )

[node name="Life" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Life"]
position = Vector2( -14, 3 )
shape = SubResource( 10 )

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="ImpactBullet" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 38 )

[node name="Groan" type="AudioStreamPlayer2D" parent="."]

[connection signal="body_entered" from="Attack" to="." method="_on_Attack_body_entered"]
[connection signal="body_exited" from="Attack" to="." method="_on_Attack_body_exited"]
[connection signal="body_entered" from="Life" to="." method="_on_Life_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
